--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon app.js",
     "dev:inspect": "nodemon --inspect app.js",
     "fix": "npx eslint . --fix",
-    "lint": "npx eslint ."
+    "lint": "npx eslint .",
+    "deploy": "scp -r ./* pipermaru@84.252.136.5:/home/pipermaru/react-mesto-api-full-gha/backend"
   },
   "author": "Piper Maru",
   "license": "ISC",
